<resources>
    <string name="app_name">VerwaltungsTest</string>
    <string name="button_kunden">Kunden</string>
    <string name="button_lager">Lager</string>
    <string name="button_bestellungen">Bestellungen</string>
    <string name="button_save">Speichern</string>
    <string name="hint_kundennummer">Kundennummer</string>
    <string name="hint_name">Name</string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_quantity">Anzahl</string>
    <string name="hint_product_id">Produktnummer</string>
    <string name="hint_bestellung_id">Bestellungsnummer</string>
    <string name="hint_kundenname">Kundenname</string>

    <string name="editText_errorMessage">Dieses Feld darf nicht leer sein!</string>
    <string name="button_edit">Bearbeiten</string>
    <string name="button_add">Anlegen</string>
    <string name="hint_orders">zeige Bestellungen</string>
    <string name="hint_save">Speichern</string>
    <string name="kunde_editmode">EditMode</string>
    <string name="button_delete">Löschen</string>
    <string name="button_bestellung_product_add">+</string>
    <string name="button_bestellung_product_delete">-</string>

    <string name="titleBestellung">Bestellung</string>
    <string name="neueBestellung">Neue Bestellung</string>
    <string name="BestellungEditError">Es sind nicht genügend Produkte vom Typ: %s vorhanden!</string>
    <string name="BestellungDeleteError">Es sind noch Prodkte auf dieser Bestellung vorhanden!</string>

    <string name="titleKunde">Kunde</string>
    <string name="neuerKunde">Neuer Kunde</string>
    <string name="KundeDeleteError">Es sind noch Bestellungen für diesen Kunden vorhanden!</string>

    <string name="titleProdukt">Produkt</string>
    <string name="titleProdukte">Produkte</string>
    <string name="neuesProdukt">Neues Produkt</string>
    <string name="ProduktDeleteError">Es sind noch Bestellungen für dieses Produkt vorhanden!</string>

    <string name="titleAdresse">Adresse</string>
    <string name="titleAdressen">Adressen</string>
    <string name="neueAdresse">Neue Adresse</string>
    <string name="AdresseDeleteError">Es sind noch Kunden mit dieser Adresse vorhanden!</string>

    <string name="button_select">Auswahl</string>
    <string name="hint_preis">0,00€</string>
    <string name="bestellung_text_bestellnummer">Bestellungsnr.:</string>
    <string name="bestellung_text_kunde">Kunde:</string>
    <string name="bestellung_text_preis">Preis:</string>
    <string name="bestellung_button_buchen">Buchen</string>
    <string name="kunde_text_nummer">Nr.:</string>
    <string name="kunde_text_name">Name:</string>
    <string name="kunde_text_adresse">Adresse:</string>
    <string name="kunde_text_art">Art:</string>
    <string name="produkt_hiint_preis">0,00€</string>
    <string name="produkt_text_nummer">Nr.:</string>
    <string name="produkt_text_name">Name:</string>
    <string name="produkt_text_imLager">Im Lager:</string>
    <string name="produkt_text_preis">Preis:</string>
    <string name="lager_zu_bestellung_hint_produkt">Produkt</string>
    <string name="lager_zu_bestellung_hint_anzahl">Anzahl</string>
    <string name="lager_zu_bestellung_text_produkt">Produkt:</string>
    <string name="lager_zu_bestellung_text_menge">Menge:</string>
    <string name="button_ok">Ok</string>
    <string name="hint_street">Straße</string>
    <string name="hint_hausnr">Hausnummer</string>
    <string name="hint_ort">Ort</string>
    <string name="hint_zusatz">Zusatz</string>
    <string name="hint_plz">Postleitzahl</string>
    <string name="adresse_text_street">Straße:</string>
    <string name="adresse_text_hausnr">Hausnr:.</string>
    <string name="adresse_text_ort">Ort:</string>
    <string name="adresse_text_plz">PLZ:</string>

    <string-array name="kunden_arten">
        <item>Privatkunde</item>
        <item>Firmenkunde</item>
    </string-array>
</resources>
