<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context="com.example.administrator.verwaltungstest.KundeActivity">

    <EditText
        android:id="@+id/edit_KundenNummer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_kundennummer"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kunde_text_nummer"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"/>

    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kunde_text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_KundenNummer"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"/>

    <EditText
        android:id="@+id/edit_Adresse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_adresse"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toStartOf="@+id/button_kunde_select_adresse"
        app:layout_constraintStart_toEndOf="@+id/kunde_text_adresse"
        app:layout_constraintTop_toBottomOf="@+id/edit_Name"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"/>

    <Spinner
        android:id="@+id/spinner_KundeTyp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/kunden_arten"
        android:theme="@style/SpinnerItemStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kunde_text_art"
        app:layout_constraintTop_toBottomOf="@+id/edit_Adresse" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_orders_kunden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_bestellungen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_kunde_delete"
        app:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_kunde_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_orders_kunden"
        app:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_kunde_select_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Name"
        app:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/kunde_text_nummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/kunde_text_nummer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/edit_Name"
        app:layout_constraintEnd_toStartOf="@+id/edit_KundenNummer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorTextHint"/>

    <TextView
        android:id="@+id/kunde_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/kunde_text_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/edit_Adresse"
        app:layout_constraintEnd_toStartOf="@+id/edit_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_KundenNummer"
        android:textColor="@color/colorTextHint"/>

    <TextView
        android:id="@+id/kunde_text_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/kunde_text_adresse"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/spinner_KundeTyp"
        app:layout_constraintEnd_toStartOf="@+id/edit_Adresse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_Name"
        android:textColor="@color/colorTextHint"/>

    <TextView
        android:id="@+id/kunde_text_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/kunde_text_art"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/spinner_KundeTyp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kunde_text_adresse"
        android:textColor="@color/colorTextHint"/>

</android.support.constraint.ConstraintLayout>
