<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context="com.example.administrator.verwaltungstest.LagerZuBestellungActivity">


    <EditText
        android:id="@+id/edit_lager_zu_bestellung_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lager_zu_bestellung_hint_produkt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button_lager_zu_bestellung_select_product"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"/>

    <EditText
        android:id="@+id/edit_lager_zu_bestellung_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lager_zu_bestellung_hint_anzahl"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/edit_lager_zu_bestellung_product"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorTextHint"/>

    <Button
        android:id="@+id/button_lager_zu_bestellung_select_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <Button
        android:id="@+id/button_save_lager_zu_bestellung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_delete_lager_zu_bestellung"
        android:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <Button
        android:id="@+id/button_delete_lager_zu_bestellung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorButtonDark"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lager_zu_bestellung_text_produkt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/edit_lager_zu_bestellung_quantity"
        app:layout_constraintEnd_toStartOf="@+id/edit_lager_zu_bestellung_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorTextHint"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lager_zu_bestellung_text_menge"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/edit_lager_zu_bestellung_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:textColor="@color/colorTextHint"/>

</android.support.constraint.ConstraintLayout>
