<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.verwaltungstest.BestellungActivity">

    <EditText
        android:id="@+id/edit_BestellunngsNummer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_bestellung_id"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Kunde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_kundenname"
        android:inputType="none"
        app:layout_constraintEnd_toStartOf="@+id/button_select_kunde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_BestellunngsNummer" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_Kunde">

        <ListView
            android:id="@+id/listview_bestellung_products"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/button_bestellung_product_add"
            app:layout_constraintStart_toStartOf="parent">

        </ListView>

        <Button
            android:id="@+id/button_bestellung_product_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bestellung_product_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/listview_bestellung_products"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_bestellung_product_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_bestellung_product_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/listview_bestellung_products"
            app:layout_constraintTop_toBottomOf="@+id/button_bestellung_product_add" />

    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/button_save_bestellung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_delete_bestellung"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_delete_bestellung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_select_kunde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_Kunde"
        app:layout_constraintTop_toBottomOf="@+id/edit_BestellunngsNummer" />

</android.support.constraint.ConstraintLayout>
