<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundDark"
    tools:context="com.example.administrator.verwaltungstest.AdressListeActivity">

    <ListView
        android:id="@+id/listview_adresse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:divider="@color/colorButtonDark"
        android:dividerHeight="2dp"
        android:listSelector="@color/colorBackgroundDarkSelected"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_adresse">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_add_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adresseAnlegen"
            android:text="@string/button_add"
            app:backgroundTint="@color/colorButtonDark"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_edit_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adresseEdit"
            android:text="@string/button_edit"
            app:backgroundTint="@color/colorButtonDark"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_delete_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adresseDelete"
            android:text="@string/button_delete"
            app:backgroundTint="@color/colorButtonDark"
            android:textColor="@color/colorText" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_select_adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectAdresse"
            android:text="@string/button_ok"
            app:backgroundTint="@color/colorButtonDark"
            android:textColor="@color/colorText" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
