<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listview_bestellung"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_bestellung">

        <Button
            android:id="@+id/button_add_bestellung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bestellungAnlegen"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_edit_bestellung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bestellungEdit"
            android:text="@string/button_edit" />

        <Button
            android:id="@+id/button_delete_bestellung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bestellungDelete"
            android:text="@string/button_delete" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
